manifests/service-1.yml
apiVersion: v1
kind: Service
metadata:
    name: "s6cluster-79ba"
    labels:
        app: "s6cluster-79ba"
spec:
    type: ClusterIP
    ports:
    - port: 8083
      targetPort: 8083
      protocol: TCP
      name: http
    selector:
        app: "s6cluster-79ba"
