manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "s6azure-d64a"
    labels:
        app: "s6azure-d64a"
spec:
    type: ClusterIP
    ports:
    - port: 8083
      targetPort: 8083
      protocol: TCP
      name: http
    selector:
        app: "s6azure-d64a"
